Link expert filter to other filters with is_part_of and is_not_part_of operators (#98)
* Link expert filter to other filters with new operators is_part_of and is_not_part_of
* Improve performance when evaluating is_part_of and is_not_part_of operators : add cache to memorize the filters already exported

Signed-off-by: Franck LECUYER <franck.lecuyer@rte-france.com>